--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "vscode-dbt-power-user",
 	"displayName": "vscode-dbt-power-user",
 	"description": "This extension seamlessly supports DBT within visual code",
+  "icon": "media/dbt.png",
 	"publisher": "innoverio",
 	"license": "MIT",
 	"homepage": "https://github.com/innoverio/vscode-dbt-power-user",
@@ -12,7 +13,7 @@
 	"bugs": {
 		"url": "https://github.com/innoverio/vscode-dbt-power-user/issues"
 	},
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.47.0"
 	},
