--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"bugs": {
 		"url": "https://github.com/innoverio/vscode-dbt-power-user/issues"
 	},
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"engines": {
 		"vscode": "^1.47.0"
 	},
@@ -76,7 +76,6 @@
 		"@typescript-eslint/parser": "^2.30.0",
 		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
-		"js-yaml": "^3.14.0",
 		"mocha": "^7.1.2",
 		"typescript": "^3.8.3",
 		"vsce": "^1.77.0",
@@ -84,8 +83,8 @@
 	},
 	"extensionDependencies": [
 		"samuelcolvin.jinjahtml"
-	],
-	"dependencies": {
-		"@types/js-yaml": "^3.12.5"
-	}
+  ],
+  "dependencies": {
+		"js-yaml": "^3.14.0"
+  }
 }
