--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
 		"module": "commonjs",
 		"target": "es6",
 		"outDir": "out",
-		"lib": [
-			"es6"
-		],
+    "lib": [
+      "es6",
+      "es2018",
+      "dom"
+  ],
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true   /* enable all strict type-checking options */
