--- a/package.json
+++ b/package.json
@@ -153,7 +153,8 @@
 		"vscode-test": "^1.3.0"
 	},
 	"extensionDependencies": [
-		"samuelcolvin.jinjahtml"
+		"samuelcolvin.jinjahtml",
+		"bastienboutonnet.vscode-dbt"
 	],
 	"dependencies": {
 		"@antv/g6": "^3.7.1",
