--- a/package.json
+++ b/package.json
@@ -144,7 +144,8 @@
 		"vscode-test": "^1.3.0"
 	},
 	"extensionDependencies": [
-		"samuelcolvin.jinjahtml"
+		"samuelcolvin.jinjahtml",
+		"bastienboutonnet.vscode-dbt"
 	],
 	"dependencies": {
 		"dayjs": "^1.8.34",
