--- a/package.json
+++ b/package.json
@@ -167,6 +167,9 @@
   ],
   "dependencies": {
     "dayjs": "^1.8.34",
-    "js-yaml": "^3.14.0"
+    "inversify": "^5.0.5",
+    "inversify-binding-decorators": "^4.0.0",
+    "js-yaml": "^3.14.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
