--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
 		"module": "commonjs",
 		"target": "es6",
 		"outDir": "out",
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"types": ["reflect-metadata"],
     "lib": [
       "es6",
       "es2018",
