--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/innoverio/vscode-dbt-power-user/issues"
   },
-  "version": "0.5.0",
+  "version": "0.5.1",
   "engines": {
     "vscode": "^1.52.0"
   },
@@ -98,8 +98,8 @@
         }
       },
       {
-        "command": "dbtPowerUser.showRanSQL",
-        "title": "dbt Power User: Show ran SQL",
+        "command": "dbtPowerUser.showRunSQL",
+        "title": "dbt Power User: Show run SQL",
         "icon": {
           "light": "./media/file-code_light.svg",
           "dark": "./media/file-code_dark.svg"
