--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/innoverio/vscode-dbt-power-user/issues"
   },
-  "version": "0.5.5",
+  "version": "0.5.6",
   "engines": {
     "vscode": "^1.52.0"
   },
@@ -119,12 +119,12 @@
         {
           "command": "dbtPowerUser.runCurrentModel",
           "when": "resourceLangId == jinja-sql",
-          "group": "1_run@1"
+          "group": "navigation@-1"
         },
         {
           "command": "dbtPowerUser.compileCurrentModel",
           "when": "resourceLangId == jinja-sql",
-          "group": "1_run"
+          "group": "navigation@0"
         }
       ],
       "view/title": [
