--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "displayName": "dbt Power User",
   "description": "This extension makes vscode seamlessly work with dbt",
   "icon": "media/dbt.png",
-  "publisher": "innoverio",
+  "publisher": "datacoves",
   "license": "MIT",
-  "homepage": "https://github.com/innoverio/vscode-dbt-power-user",
+  "homepage": "https://github.com/datacoves/vscode-dbt-power-user",
   "repository": {
     "type": "git",
-    "url": "https://github.com/innoverio/vscode-dbt-power-user.git"
+    "url": "https://github.com/datacoves/vscode-dbt-power-user.git"
   },
   "bugs": {
-    "url": "https://github.com/innoverio/vscode-dbt-power-user/issues"
+    "url": "https://github.com/datacoves/vscode-dbt-power-user/issues"
   },
-  "version": "0.5.2-datacoves",
+  "version": "0.5.3-datacoves",
   "engines": {
     "vscode": "^1.52.0"
   },
@@ -197,6 +197,7 @@
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "ovsx": "^0.3.0",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^8.0.3",
     "typescript": "^3.8.3",
     "vsce": "^1.103.1",
